--- a/index2.html
+++ b/index2.html
@@ -13,6 +13,7 @@
         <main>
             <H1>INdonesia merdeka</H1>
             <h3>bubarka dpr</h3>
+            <h3>indonesia bags</h3>
         </main>
     </Section>
 </body>
