--- a/index1.html
+++ b/index1.html
@@ -12,8 +12,8 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Home</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Panel</a></li>
             </ul>
         </nav>
     </section>
