--- a/index1.html
+++ b/index1.html
@@ -17,5 +17,12 @@
             </ul>
         </nav>
     </section>
+    <section>
+        <main>
+            <div class="img">
+                <h1>enak</h1>
+            </div>
+        </main>
+    </section>
 </body>
 </html>
