--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
     <Section>
         <main>
             <H1>INdonesia merdeka</H1>
-            <h3>bubarka dpr</h3>
+            <h3>bubarka dpr biar aman uangnya</h3>
             <h3>indonesia bags</h3>
         </main>
     </Section>
