--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 <body>
     <Section>
         <main>
-            <H1>INdonesia merdeka</H1>
+            <H1>INdonesia merdeka tanpa adanya koruptor</H1>
             <h3>bubarka dpr biar aman uangnya</h3>
             <h3>indonesia bags</h3>
         </main>
